--- a/index.html
+++ b/index.html
@@ -20,36 +20,32 @@
 
 <body>
   <center>
-<div id="myModal" class="modal fade">
+<!-- Modal -->
 <div id="myModal" class="modal fade">
   <div class="modal-content">
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal">&times;</button>
-      <h4 class="modal-title">Sketches</h4>
+      <h4 class="modal-title">Sketchs</h4>
     </div>
 
     <div class="modal-body">
       <img src="sketch1.png">
       <img src="sketch2.png">
     </div>
-  </div>
+
   </div>
 </div>
 
-<h2>Quick Draw
+<h1>Quick Draw
 <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Show Sketch</button>
   </h1>
-  <p id="label">label: </p>
-  <p id="confidence">Confidence: </p>
-<label>Sketch To be Draw is: </label>
-  <br>
-  <br>
-  <h1 id="score">Score: </h1>
-  <h1 id="time">Timer: </h1>
+  <p id="label">Your Sketch : </p>
+  <p id="confidence">Confidence : </p>   
+  <p id="sketch_name">Sketch To be Drawn: </p>  
 </center> 
 
-
-
+  <span id="score">Score : </span>   
+  <span id="time">Timer : </span>
 
 <script src="main.js"></script>
 </body>
